<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ScrollView style="@style/layout_mm_style" >

        <RelativeLayout style="@style/layout_mw_style" >

            <TextView android:textSize="14sp"
                android:id="@+id/originate_interestcontent_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="10dip"
                android:layout_marginTop="10dip"
                android:text="@string/originate_search_interestcontent"
                android:textColor="@color/textgray" />

            <View
                android:id="@+id/imageView1"
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_below="@+id/originate_interestcontent_tv"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:background="@color/line_gray" />

            <LinearLayout
                android:id="@+id/linearlayout1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageView1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip" >

                <TextView android:textSize="14sp"
                    android:id="@+id/tags11_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags12_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags13_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags14_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearlayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearlayout1"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dip"
                android:layout_marginTop="5dip" >

                <TextView android:textSize="14sp"
                    android:id="@+id/tags21_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags22_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags23_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_marginRight="3dip"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />

                <TextView android:textSize="14sp"
                    android:id="@+id/tags24_tv"
                    style="@style/layout_tv_mw_round"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:textColor="@color/gray" />
            </LinearLayout>

            <TextView android:textSize="15sp"
                android:id="@+id/originate_history_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/linearlayout1"
                android:layout_below="@+id/linearlayout2"
                android:layout_marginTop="30dip"
                android:text="@string/originate_search_history"
                android:textColor="@color/textgray" />

            <View
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_below="@+id/originate_history_tv"
                android:layout_marginTop="5dip"
                android:background="@color/line_gray" />

            <com.newland.wstdd.common.view.FindListViews
                android:id="@+id/originate_history_lv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
               	android:divider="@null"
                android:layout_below="@+id/imageView2" >
            </com.newland.wstdd.common.view.FindListViews>

            <View
                android:id="@+id/view3"
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_below="@+id/originate_history_lv"
                android:background="@color/line_gray" />

            <TextView android:textSize="14sp"
                android:id="@+id/originate_cleanhistory_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/view3"
                android:paddingBottom="5dp"
                android:paddingLeft="20dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:text="@string/originate_search_cleanhistory"
                android:textColor="@color/red" />

            <View
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="0.1dip"
                android:layout_below="@+id/originate_cleanhistory_tv"
                android:layout_marginBottom="5dip"
                android:background="@color/line_gray" />
        </RelativeLayout>
    </ScrollView>

</LinearLayout>